[workspace]
resolver = "2"
members = ["jarsigner", "cli"]

[workspace.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
rsa = { version = "0.9", features = ["sha2", "pem"] }
der = "0.7"
spki = "0.7"
signature = "2"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
rand = "0.8"
