[package]
name = "jarsigner"
version = "0.2.0"
edition = "2021"
description = "JAR signing library compatible with jarsigner API"
authors = ["Kojacoord"]
license = "MIT"
repository = "https://github.com/KojaCraft/jarsigner"
homepage = "https://github.com/KojaCraft/jarsigner"
documentation = "https://docs.rs/jarsigner"
readme = "../README.md"
keywords = ["jar", "signing", "jarsigner", "java", "rsa"]
categories = ["cryptography", "development-tools"]
rust-version = "1.70"

[dependencies]
zip = { workspace = true }
base64 = { workspace = true }
rsa = { workspace = true }
der = { workspace = true }
spki = { workspace = true }
signature = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
